--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <h1>
             Can you guess the anime?
         </h1>
-        <button>Play</button>
+        <div>
+            <button>Play</button>
+        </div>
     </main>
+    <script src="index.js"></script>
 </body>
 </html>
