--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <h1>
             Can you guess the anime?
         </h1>
-        <div>
+        <div id="play+titles">
             <button>Play</button>
+        </div>
+        <div id="playAgain">
+            
         </div>
     </main>
     <script src="index.js"></script>
